Fixed SearchLayout "container" does not stretch to full screen width

--- a/src/layouts/SearchLayout.scss
+++ b/src/layouts/SearchLayout.scss
@@ -43,6 +43,7 @@
   overflow-y: hidden;
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
 
   .navigation,
   :global(.header) {
